<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.animalspictureandsounds.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="4"
        tools:ignore="UselessParent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:weightSum="2"
            android:background="@android:color/holo_red_dark"
            android:id="@+id/image_Text_Layout">

            <ImageView
                android:id="@+id/mainPicture"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:adjustViewBounds="false"
                android:contentDescription="@string/main_image"
                android:padding="10dp"
                android:scaleType="fitCenter" />

            <TextView
                android:id="@+id/imageDescription"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingEnd="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingStart="10dp"
                android:text="@string/click_on_a_picture"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="30sp" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="0dp"
            android:fillViewport="true"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:background="@android:color/holo_orange_light"
                android:layout_height="590dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="590dp"
                    android:orientation="vertical"
                    android:weightSum="4"
                    android:layout_gravity="top"
                    android:padding="0dp"
                    android:layout_margin="0dp">



                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:weightSum="3"
                        android:layout_margin="10dp">

                        <ImageButton
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            app:srcCompat="@drawable/dog"
                            android:id="@+id/dogBtn"
                            android:layout_weight="1"
                            android:scaleType="fitCenter"
                            android:background="@android:color/transparent"
                            android:contentDescription="@string/dog_image"
                            android:layout_marginLeft="2dp"
                            android:layout_marginRight="2dp"
                            android:layout_marginEnd="2dp" />

                        <ImageButton
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            app:srcCompat="@drawable/cat"
                            android:id="@+id/catBtn"
                            android:layout_weight="1"
                            android:scaleType="fitCenter"
                            android:background="@android:color/transparent"
                            android:contentDescription="@string/cat_image"
                            android:layout_marginRight="2dp"
                            android:layout_marginEnd="2dp" />

                        <ImageButton
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            app:srcCompat="@drawable/cow"
                            android:id="@+id/cowBtn"
                            android:layout_weight="1"
                            android:scaleType="fitCenter"
                            android:background="@android:color/transparent"
                            android:contentDescription="@string/cow_image"
                            android:layout_marginRight="2dp"
                            android:layout_marginEnd="2dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:weightSum="3"
                        android:layout_weight="1"
                        android:layout_margin="10dp">

                        <ImageButton
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            app:srcCompat="@drawable/duck"
                            android:id="@+id/duckBtn"
                            android:layout_weight="1"
                            android:background="@android:color/transparent"
                            android:scaleType="fitCenter"
                            android:contentDescription="@string/duck_image"
                            android:layout_marginRight="2dp"
                            android:layout_marginLeft="2dp"
                            android:layout_marginEnd="2dp" />

                        <ImageButton
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            app:srcCompat="@drawable/sheep"
                            android:id="@+id/sheepBtn"
                            android:layout_weight="1"
                            android:background="@android:color/transparent"
                            android:scaleType="fitCenter"
                            android:contentDescription="@string/sheep_image"
                            android:layout_marginRight="2dp"
                            android:layout_marginEnd="2dp" />

                        <ImageButton
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            app:srcCompat="@drawable/horse"
                            android:id="@+id/horseBtn"
                            android:layout_weight="1"
                            android:background="@android:color/transparent"
                            android:scaleType="fitCenter"
                            android:contentDescription="@string/horse_image"
                            android:layout_marginRight="2dp"
                            android:layout_marginEnd="2dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:weightSum="3"
                        android:layout_weight="1"
                        android:layout_marginEnd="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginStart="5dp">

                        <ImageButton
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            app:srcCompat="@drawable/tiger"
                            android:id="@+id/tigerBtn"
                            android:layout_weight="1"
                            android:background="@android:color/transparent"
                            android:scaleType="fitCenter"
                            android:contentDescription="@string/tiger_image"
                            android:layout_marginLeft="2dp"
                            android:layout_marginRight="2dp"
                            android:layout_marginEnd="2dp" />

                        <ImageButton
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            app:srcCompat="@drawable/panda"
                            android:id="@+id/pandaBtn"
                            android:layout_weight="1"
                            android:background="@android:color/transparent"
                            android:scaleType="fitCenter"
                            android:contentDescription="@string/panda_image"
                            android:layout_marginRight="2dp"
                            android:layout_marginEnd="2dp" />

                        <ImageButton
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            app:srcCompat="@drawable/gorilla"
                            android:id="@+id/gorillaBtn"
                            android:layout_weight="1"
                            android:background="@android:color/transparent"
                            android:scaleType="fitCenter"
                            android:contentDescription="@string/gorilla_image"
                            android:layout_marginRight="2dp"
                            android:layout_marginEnd="2dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:weightSum="3"
                        android:layout_marginEnd="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginStart="5dp">

                        <ImageButton
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            app:srcCompat="@drawable/bird"
                            android:id="@+id/birdBtn"
                            android:layout_weight="1"
                            android:background="@android:color/transparent"
                            android:scaleType="fitCenter"
                            android:contentDescription="@string/bird_image"
                            android:layout_marginLeft="2dp"
                            android:layout_marginRight="2dp"
                            android:layout_marginEnd="2dp" />

                        <ImageButton
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            app:srcCompat="@drawable/pig"
                            android:id="@+id/pigBtn"
                            android:layout_weight="1"
                            android:background="@android:color/transparent"
                            android:scaleType="fitCenter"
                            android:contentDescription="@string/pig_image"
                            android:layout_marginRight="2dp"
                            android:layout_marginEnd="2dp" />

                        <ImageButton
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            app:srcCompat="@drawable/elephant"
                            android:id="@+id/elephantBtn"
                            android:layout_weight="1"
                            android:background="@android:color/transparent"
                            android:scaleType="fitCenter"
                            android:contentDescription="@string/elephant_image"
                            android:layout_marginRight="2dp"
                            android:layout_marginEnd="2dp" />

                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
